# CoNi-MPC

./: .gitignore  README.md  index.html
.github/workflows/: page.yaml
coni_mpc/: CMakeLists.txt  package.xml
coni_mpc/acado_model/: README.md  quadrotor_model_codegen  quadrotor_model_thrustrates.cpp
coni_mpc/acado_model/quadrotor_mpc_codegen/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
coni_mpc/include/acado_mpc/: mpc_common.h  mpc_controller.h  mpc_params.h  mpc_wrapper.h
coni_mpc/include/coni_mpc/: common.hpp  mpc_base.h  num_sim_mpc.h
coni_mpc/include/num_sim/: Integrator.h  Simulator.h  System.h
coni_mpc/launch/: num_sim_non_one_point.launch
coni_mpc/parameters/: num_sim_non_one_point.yaml
coni_mpc/rviz/: non_inertial.rviz  world.rviz
coni_mpc/src/acado_mpc/: mpc_common.cpp  mpc_controller.cpp  mpc_wrapper.cpp
coni_mpc/src/coni_mpc/: mpc_base.cpp  num_sim_mpc.cpp
coni_mpc/src/num_sim/: num_sim_non_one_point_node.cpp
css/: app.css  bootstrap.min.css
no_catkin_compilation/acado-stable/: CMakeLists.txt
no_catkin_compilation/acado-stable/interfaces/matlab/acado/: END_ACADO.m
