<?xml version="1.0"?>
<package format="2">
    <name>coni_mpc</name>
    <version>0.0.0</version>
    <description>The coni_mpc package</description>
    <maintainer email="zhang.baozhe2000@gmail.com">Baozhe Zhang</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>

    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>mavros_msgs</depend>
    <depend>trajectory_msgs</depend>



    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
